<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/title_add_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_black_24dp"
        android:title="@string/title_wallet" />

</menu>
